Use Java 11 collections conveniences everywhere (#41399)
This commit replaces all applicable uses with Java 11 collections
convenience methods.